atualização do cross browsing usando jsonp

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Código fonte do blog feito com o gist como banco de dados.
+Não exatamente, mas um blog feito com js hospedado no github e persistido através de gists.
